@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2008,v 1.1192 2008/05/30 11:00:01 wiz Exp $
+$NetBSD: CHANGES-2008,v 1.1193 2008/05/30 11:53:24 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2008:
 
@@ -1979,8 +1979,8 @@ Changes to the packages collection and infrastructure in 2008:
 	Updated textproc/p5-YAML-Syck to 1.04 [abs 2008-05-28]
 	Updated time/p5-DateTime-Format-Builder to 0.7901 [abs 2008-05-28]
 	Updated time/p5-DateTime to 0.4302 [abs 2008-05-28]
-	Updated time/p5-DateTime-TimeZone to 0.77  [abs 2008-05-28]
-	Updated time/p5-Time-Clock to 0.12  [abs 2008-05-28]
+	Updated time/p5-DateTime-TimeZone to 0.77 [abs 2008-05-28]
+	Updated time/p5-Time-Clock to 0.12 [abs 2008-05-28]
 	Updated time/p5-Time-HiRes to 1.9715 [abs 2008-05-28]
 	Updated mail/spamdyke to 3.1.8 [schmonz 2008-05-28]
 	Updated security/stunnel to 4.24nb1 [schmonz 2008-05-29]
@@ -2002,3 +2002,9 @@ Changes to the packages collection and infrastructure in 2008:
 	Updated x11/xf86-input-mouse to 1.3.0 [wiz 2008-05-30]
 	Updated sysutils/cdrtools to 2.01.01.40 [wiz 2008-05-30]
 	Updated misc/tellico to 1.3.2.1 [wiz 2008-05-30]
+	Added devel/p5-Array-RefElem version 1.00 [abs 2008-05-30]
+	Added devel/p5-Cache-FastMmap version 1.26 [abs 2008-05-30]
+	Added devel/p5-parent version 0.221 [abs 2008-05-30]
+	Added textproc/p5-Lingua-EN-Inflect-Number version 1.1 [abs 2008-05-30]
+	Added textproc/p5-Text-SimpleTable version 0.03 [abs 2008-05-30]
+	Added textproc/p5-YAML-Tiny version 1.32 [abs 2008-05-30]
